# bigcpp

./: .gitignore  .gitmodules  README.md
task2/: CMakeLists.txt  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  main.cpp  solution.cpp  solution.hpp  temperature.cpp  temperature.hpp
task3/bib/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
task3/test/: CMakeLists.txt  main.cpp
task4/: 50gen.txt  CMakeLists.txt  agar.txt  genetic.cpp  genetic.hpp  harverster.txt  life.cpp  life.hpp  main.cpp  planner_d_moved.txt  planner_down.txt  planner_upside.txt  planner_upside_moved.txt  simple_test.txt  test.txt  test_after_100.txt  test_field.txt
task4/exp/: best_crits.txt  deviation.txt  worst_time.txt
task4/exp/series_0/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_2_after_100.txt  run_3.txt  run_3_after_100.txt  run_4.txt  run_4_after_100.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_6_after_100.txt  run_7.txt  run_8.txt  run_8_after_100.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_1/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_2_after_100.txt  run_3.txt  run_4.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_7.txt  run_7_after_100.txt  run_8.txt  run_8_after_100.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_2/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_2_after_100.txt  run_3.txt  run_3_after_100.txt  run_4.txt  run_4_after_100.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_6_after_100.txt  run_7.txt  run_7_after_100.txt  run_8.txt  run_8_after_100.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_3/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_2_after_100.txt  run_3.txt  run_3_after_100.txt  run_4.txt  run_4_after_100.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_7.txt  run_7_after_100.txt  run_8.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_4/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_3.txt  run_3_after_100.txt  run_4.txt  run_4_after_100.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_6_after_100.txt  run_7.txt  run_7_after_100.txt  run_8.txt  run_8_after_100.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_5/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  run_2.txt  run_2_after_100.txt  run_3.txt  run_3_after_100.txt  run_4.txt  run_4_after_100.txt  run_5.txt  run_5_after_100.txt  run_6.txt  run_6_after_100.txt  run_7.txt  run_8.txt  run_8_after_100.txt  run_9.txt  run_9_after_100.txt  time.txt
task4/exp/series_6/: crit.txt  run_0.txt  run_0_after_100.txt  run_1.txt  run_1_after_100.txt  (+16 more)
(+65 files in other folders)
